# LazyLibrarian

./: .dockerignore  .gitignore  BookBagOfHolding.py  CLAUDE.md  Dockerfile  GET_HEALTHY_PLAN.md  LazyLibrarian.py  LazyLibrarian_UX_Mockup.html  LazyLibrarian_UX_Modernization_Requirements.md  README.md  UX_IMPLEMENTATION_PLAN.md  claude.md  pyproject.toml  pytest.ini  requirements-dev.txt
.claude/: settings.json
.github/workflows/: ci.yml
bookbagofholding/: __init__.py  api.py  bookrename.py  bookwork.py  cache.py  calibre.py  classes.py  common.py  csvfile.py  database.py  dbupgrade.py  deluge.py  directparser.py  downloadmethods.py  formatter.py  gb.py  images.py  importer.py  librarysync.py  logger.py  magnet2torrent.py  manualbook.py  nzbget.py  opds.py  postprocess.py  providers.py  qbittorrent.py  resultlist.py  rssfeed.py  rtorrent.py  sabnzbd.py  searchbook.py  searchrss.py  synology.py  torrentparser.py  transmission.py  utorrent.py  version.py  webServe.py  webStart.py
bookbagofholding/api_v2/: __init__.py  author_api.py  base.py  book_api.py  system_api.py
bookbagofholding/clients/: __init__.py  base.py  http_wrapper.py
bookbagofholding/config/: __init__.py  loader.py  settings.py
bookbagofholding/database_v2/: __init__.py  migration_framework.py
bookbagofholding/deluge_client/: client.py
bookbagofholding/mobi/: __init__.py
bookbagofholding/postprocess_v2/: __init__.py  detector.py  matcher.py  metadata.py  organizer.py  unpacker.py
bookbagofholding/unittests/: __init__.py  conftest.py  test_api.py  test_api_v2.py  test_cache.py  test_classes.py  test_client_base.py  test_common.py  test_config_settings.py  test_database.py  test_dbupgrade.py  test_download_clients.py  test_formatter.py  test_http_wrapper.py  test_integration.py  test_logger.py  test_migration_framework.py  test_postprocess.py  test_postprocess_v2.py  test_providers.py  test_resultlist.py  test_url_builder.py  test_utils.py  test_web_auth.py  test_web_handlers.py  test_webserve.py
bookbagofholding/utils/: __init__.py  url_builder.py
bookbagofholding/web/: __init__.py  auth.py  templates.py
config/cache/: opensearchauthors.xml  (+4 more)
data/: README.md  opensearch.template
examples/: example_ebook_convert.py  example_preprocessor.py
init/: INSTALL.txt  bookbagofholding.default  bookbagofholding.desktop  bookbagofholding.initd  bookbagofholding.service  bookbagofholding.sh  freebsd.initd  lazylibrarian.desktop  lazylibrarian.initd  lazylibrarian.service
lazylibrarian/: __init__.py  api.py  bookrename.py  bookwork.py  cache.py  calibre.py  common.py  csvfile.py  database.py  dbupgrade.py  deluge.py  directparser.py  downloadmethods.py  formatter.py  gb.py  gr.py  grsync.py  images.py  importer.py  librarysync.py  logger.py  magazinescan.py  magnet2torrent.py  manualbook.py  nzbget.py  opds.py  postprocess.py  providers.py  qbittorrent.py  resultlist.py  rssfeed.py  rtorrent.py  sabnzbd.py  searchmag.py  searchrss.py  synology.py  torrentparser.py  transmission.py  utorrent.py  versioncheck.py  (+2 more)
(+128 files in other folders)
