[project]
name = "lazylibrarian"
version = "1.0.0"
description = "Automated ebook and audiobook downloading"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}

dependencies = [
    "cherrypy>=18.0.0",
    "mako>=1.2.0",
    "requests>=2.28.0",
    "httplib2>=0.20.0",
    "beautifulsoup4>=4.11.0",
    "feedparser>=6.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.20.0",
    "bencode.py>=4.0.0",
]

[project.optional-dependencies]
notifications = [
    "python-twitter>=3.5",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "coverage>=7.0.0",
    "responses>=0.22.0",
    "requests-mock>=1.10.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lazylibrarian", "vendor"]
